--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nestjs-template",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "zeabur",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "reflect-metadata": "^0.1.13",
